# src/app/api/models/messages-partial.ts
@@ -8,6 +8,8 @@ export interface MessagesPartial {
   caseId?: number;
   created_at?: string;
   id?: number;
+  isReadByAdmin?: boolean;
+  isReadByDoctor?: boolean;
   message?: string;
   stage?: string;
   userId?: string;
