# src/app/api/models/messages.ts
@@ -4,6 +4,8 @@ export interface Messages {
   caseId?: number;
   created_at?: string;
   id?: number;
+  isReadByAdmin?: boolean;
+  isReadByDoctor?: boolean;
   message?: string;
   stage?: string;
   userId?: string;
