# src/app/api/models/new-messages.ts
@@ -7,6 +7,8 @@
 export interface NewMessages {
   caseId?: number;
   created_at?: string;
+  isReadByAdmin?: boolean;
+  isReadByDoctor?: boolean;
   message?: string;
   stage?: string;
   userId?: string;
