# src/app/api/models/scan.ts
@@ -7,6 +7,7 @@ export interface Scan {
   patientId?: number;
   stage?: number;
   uploadDate: string;
+  upload_table?: number;
   url: string;
   userId?: string;
 }
